// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicProjectPage renders a spinner if no project is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiCircularProgress-root pageProgress MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    data-testid="loading_spinner"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders correctly with no end date 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-160"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-155"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-161"
        >
          <div
            class="MuiBox-root MuiBox-root-162"
          >
            <div
              class="MuiTabs-root makeStyles-tabs-156"
            >
              <div
                class="MuiTabs-scroller MuiTabs-fixed"
                style="overflow: hidden;"
              >
                <div
                  aria-label="Project Navigation"
                  class="MuiTabs-flexContainer"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      Project Details
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      Documents
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-163 PrivateTabIndicator-colorSecondary-165 MuiTabs-indicator"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <div
            aria-labelledby="simple-tab-project_details"
            class="makeStyles-tabPanel-157"
            id="simple-tabpanel-project_details"
            role="tabpanel"
          >
            <div
              class="MuiBox-root MuiBox-root-175"
            >
              <div
                class="MuiBox-root MuiBox-root-176"
              >
                <div
                  class="MuiBox-root MuiBox-root-177"
                >
                  <a
                    aria-disabled="false"
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeSmall"
                      >
                        <svg
                          role="presentation"
                          style="width: 1.3125rem; height: 1.3125rem;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                            style="fill: currentColor;"
                          />
                        </svg>
                      </span>
                      Back to Projects
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-178"
                >
                  <h1
                    class="MuiBox-root MuiBox-root-179 makeStyles-projectTitle-167"
                  >
                    <b>
                      Project -
                    </b>
                     Test Project Name
                  </h1>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-180"
                >
                  <div
                    class="MuiBox-root MuiBox-root-181"
                  >
                    <div
                      class="MuiChip-root makeStyles-chip-169 makeStyles-chipActive-170 MuiChip-sizeSmall"
                    >
                      <span
                        class="MuiChip-label MuiChip-labelSmall"
                      >
                        Active
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-182 makeStyles-projectMetadata-168"
              >
                <section
                  class="MuiBox-root MuiBox-root-183"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Objectives
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-184"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Project objectives
                    </p>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-185"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    General Information
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-186"
                  >
                    <dl
                      class="MuiBox-root MuiBox-root-187"
                      data-testid="general_info_component"
                    >
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project Name:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Test Project Name
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Region:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                          data-testid="project-region"
                        />
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Range:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                          data-testid="project-region"
                        >
                          test 1
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Oct 10, 1998
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Completion Date:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ---
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Focal Species:
                        </dd>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        />
                      </div>
                    </dl>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-188"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Project Contacts
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-189"
                  >
                    <ul
                      class="makeStyles-projectContactList-190"
                    >
                      <li
                        class="MuiBox-root MuiBox-root-193"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-194"
                        >
                          <svg
                            class="makeStyles-contactIcon-191"
                            role="presentation"
                            style="width: 2.25rem; height: 2.25rem;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </div>
                        <div>
                          <div>
                            <strong
                              data-testid="contact_name"
                            >
                               Amanda Christensen
                              <sup>
                                <span
                                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
                                >
                                   Primary
                                </span>
                              </sup>
                            </strong>
                          </div>
                          <div>
                            <a
                              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                              href="#"
                            >
                              amanda@christensen.com
                            </a>
                          </div>
                          <div>
                            Amanda and associates
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-195"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="projectPermitsTitle"
                  >
                    Permits
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-196"
                  >
                    <ul
                      class="makeStyles-projectPermitList-197"
                    >
                      <li
                        data-testid="permit_item"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          123 - 
                          <span>
                            Permit type
                          </span>
                        </span>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-198"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="IUCNTitle"
                  >
                    IUCN Conservation Actions Classifications
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-199"
                  >
                    <ul
                      class="makeStyles-projectIucnList-200"
                    >
                      <li
                        data-testid="iucn_data"
                      >
                        IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-201"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="fundingSourcesTitle"
                  >
                    Funding Sources
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-202"
                  >
                    <ul
                      class="makeStyles-projectFundingList-203"
                    >
                      <li
                        data-testid="funding_data"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-204"
                        >
                          <strong
                            data-testid="agencyTitle"
                          >
                            agency name
                          </strong>
                        </div>
                        <dl
                          class="MuiBox-root MuiBox-root-205"
                        >
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Funding Amount:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              $333
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Project ID:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              ABC123
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Start Date:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              Apr 14, 2000
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              End Date:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              Apr 13, 2021
                            </dt>
                          </div>
                        </dl>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-206"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="partnershipsTitle"
                  >
                    Partnerships
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-207"
                  >
                    <dl
                      class="MuiBox-root MuiBox-root-209"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                          data-testid="indigenousData"
                        >
                          Indigenous Partnerships
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          <span
                            class="makeStyles-partnerItem-208"
                            data-testid="indigenous_partners_data"
                          >
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                          <span
                            class="makeStyles-partnerItem-208"
                            data-testid="indigenous_partners_data"
                          >
                            First nations code
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                          data-testid="stakeholderData"
                        >
                          Other Partnerships
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          <span
                            class="makeStyles-partnerItem-208"
                            data-testid="stakeholder_partners_data"
                          >
                            partner2
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                          <span
                            class="makeStyles-partnerItem-208"
                            data-testid="stakeholder_partners_data"
                          >
                            partner3
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                        </dd>
                      </div>
                    </dl>
                  </div>
                </section>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="simple-tab-project_documents"
            class="makeStyles-tabPanel-157"
            hidden=""
            id="simple-tabpanel-project_documents"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-210 makeStyles-projectLocationBoundary-159"
    >
      <div
        class="MuiBox-root MuiBox-root-211"
      >
        <div
          class="MuiBox-root MuiBox-root-212"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  aria-label="Open Layer Menu"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
                  data-testid="open-layer-menu"
                  id="open-layer-menu"
                  tabindex="0"
                  title="Open Layer Menu"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <strong>
                      Project Layers (0)
                    </strong>
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7,10L12,15L17,10H7Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-213"
      >
        <div
          class="MuiBox-root MuiBox-root-214"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-215 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_67"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_67"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-216"
      >
        <div
          class="MuiBox-root MuiBox-root-223"
        >
          <div
            class="MuiBox-root MuiBox-root-224"
            hidden=""
          >
            <strong>
              Found 0 treatments
            </strong>
          </div>
          <div
            class="MuiTableContainer-root MuiBox-root MuiBox-root-225"
          >
            <table
              aria-label="treatments-list-table"
              class="MuiTable-root makeStyles-treatmentsTable-217 MuiTable-stickyHeader"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  >
                    ID
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Treatments
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="110"
                  >
                    Width (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="120"
                  >
                    Length (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="110"
                  >
                    Area (Ha)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
                data-testid="project-table"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                    colspan="7"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-226"
                    >
                      No Treatments
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is active) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-16"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-11"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-17"
        >
          <div
            class="MuiBox-root MuiBox-root-18"
          >
            <div
              class="MuiTabs-root makeStyles-tabs-12"
            >
              <div
                class="MuiTabs-scroller MuiTabs-fixed"
                style="overflow: hidden;"
              >
                <div
                  aria-label="Project Navigation"
                  class="MuiTabs-flexContainer"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      Project Details
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      Documents
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-19 PrivateTabIndicator-colorSecondary-21 MuiTabs-indicator"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <div
            aria-labelledby="simple-tab-project_details"
            class="makeStyles-tabPanel-13"
            id="simple-tabpanel-project_details"
            role="tabpanel"
          >
            <div
              class="MuiBox-root MuiBox-root-31"
            >
              <div
                class="MuiBox-root MuiBox-root-32"
              >
                <div
                  class="MuiBox-root MuiBox-root-33"
                >
                  <a
                    aria-disabled="false"
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeSmall"
                      >
                        <svg
                          role="presentation"
                          style="width: 1.3125rem; height: 1.3125rem;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                            style="fill: currentColor;"
                          />
                        </svg>
                      </span>
                      Back to Projects
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-34"
                >
                  <h1
                    class="MuiBox-root MuiBox-root-35 makeStyles-projectTitle-23"
                  >
                    <b>
                      Project -
                    </b>
                     Test Project Name
                  </h1>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-36"
                >
                  <div
                    class="MuiBox-root MuiBox-root-37"
                  >
                    <div
                      class="MuiChip-root makeStyles-chip-25 makeStyles-chipActive-26 MuiChip-sizeSmall"
                    >
                      <span
                        class="MuiChip-label MuiChip-labelSmall"
                      >
                        Active
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-38 makeStyles-projectMetadata-24"
              >
                <section
                  class="MuiBox-root MuiBox-root-39"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Objectives
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-40"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Project objectives
                    </p>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-41"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    General Information
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-42"
                  >
                    <dl
                      class="MuiBox-root MuiBox-root-43"
                      data-testid="general_info_component"
                    >
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project Name:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Test Project Name
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Region:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                          data-testid="project-region"
                        />
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Range:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                          data-testid="project-region"
                        >
                          test 1
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Oct 10, 1998
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Completion Date:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Feb 26, 2100
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Focal Species:
                        </dd>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        />
                      </div>
                    </dl>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-44"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Project Contacts
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-45"
                  >
                    <ul
                      class="makeStyles-projectContactList-46"
                    >
                      <li
                        class="MuiBox-root MuiBox-root-49"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-50"
                        >
                          <svg
                            class="makeStyles-contactIcon-47"
                            role="presentation"
                            style="width: 2.25rem; height: 2.25rem;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </div>
                        <div>
                          <div>
                            <strong
                              data-testid="contact_name"
                            >
                               Amanda Christensen
                              <sup>
                                <span
                                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
                                >
                                   Primary
                                </span>
                              </sup>
                            </strong>
                          </div>
                          <div>
                            <a
                              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                              href="#"
                            >
                              amanda@christensen.com
                            </a>
                          </div>
                          <div>
                            Amanda and associates
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-51"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="projectPermitsTitle"
                  >
                    Permits
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-52"
                  >
                    <ul
                      class="makeStyles-projectPermitList-53"
                    >
                      <li
                        data-testid="permit_item"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          123 - 
                          <span>
                            Permit type
                          </span>
                        </span>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-54"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="IUCNTitle"
                  >
                    IUCN Conservation Actions Classifications
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-55"
                  >
                    <ul
                      class="makeStyles-projectIucnList-56"
                    >
                      <li
                        data-testid="iucn_data"
                      >
                        IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-57"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="fundingSourcesTitle"
                  >
                    Funding Sources
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-58"
                  >
                    <ul
                      class="makeStyles-projectFundingList-59"
                    >
                      <li
                        data-testid="funding_data"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-60"
                        >
                          <strong
                            data-testid="agencyTitle"
                          >
                            agency name
                          </strong>
                        </div>
                        <dl
                          class="MuiBox-root MuiBox-root-61"
                        >
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Funding Amount:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              $333
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Project ID:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              ABC123
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Start Date:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              Apr 14, 2000
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              End Date:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              Apr 13, 2021
                            </dt>
                          </div>
                        </dl>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-62"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="partnershipsTitle"
                  >
                    Partnerships
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-63"
                  >
                    <dl
                      class="MuiBox-root MuiBox-root-65"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                          data-testid="indigenousData"
                        >
                          Indigenous Partnerships
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          <span
                            class="makeStyles-partnerItem-64"
                            data-testid="indigenous_partners_data"
                          >
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                          <span
                            class="makeStyles-partnerItem-64"
                            data-testid="indigenous_partners_data"
                          >
                            First nations code
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                          data-testid="stakeholderData"
                        >
                          Other Partnerships
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          <span
                            class="makeStyles-partnerItem-64"
                            data-testid="stakeholder_partners_data"
                          >
                            partner2
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                          <span
                            class="makeStyles-partnerItem-64"
                            data-testid="stakeholder_partners_data"
                          >
                            partner3
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                        </dd>
                      </div>
                    </dl>
                  </div>
                </section>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="simple-tab-project_documents"
            class="makeStyles-tabPanel-13"
            hidden=""
            id="simple-tabpanel-project_documents"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-66 makeStyles-projectLocationBoundary-15"
    >
      <div
        class="MuiBox-root MuiBox-root-67"
      >
        <div
          class="MuiBox-root MuiBox-root-68"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  aria-label="Open Layer Menu"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
                  data-testid="open-layer-menu"
                  id="open-layer-menu"
                  tabindex="0"
                  title="Open Layer Menu"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <strong>
                      Project Layers (0)
                    </strong>
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7,10L12,15L17,10H7Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-69"
      >
        <div
          class="MuiBox-root MuiBox-root-70"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-71 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_35"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_35"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-72"
      >
        <div
          class="MuiBox-root MuiBox-root-79"
        >
          <div
            class="MuiBox-root MuiBox-root-80"
            hidden=""
          >
            <strong>
              Found 0 treatments
            </strong>
          </div>
          <div
            class="MuiTableContainer-root MuiBox-root MuiBox-root-81"
          >
            <table
              aria-label="treatments-list-table"
              class="MuiTable-root makeStyles-treatmentsTable-73 MuiTable-stickyHeader"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  >
                    ID
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Treatments
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="110"
                  >
                    Width (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="120"
                  >
                    Length (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="110"
                  >
                    Area (Ha)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
                data-testid="project-table"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                    colspan="7"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-82"
                    >
                      No Treatments
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is completed) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-88"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-83"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-89"
        >
          <div
            class="MuiBox-root MuiBox-root-90"
          >
            <div
              class="MuiTabs-root makeStyles-tabs-84"
            >
              <div
                class="MuiTabs-scroller MuiTabs-fixed"
                style="overflow: hidden;"
              >
                <div
                  aria-label="Project Navigation"
                  class="MuiTabs-flexContainer"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      Project Details
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      Documents
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-91 PrivateTabIndicator-colorSecondary-93 MuiTabs-indicator"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <div
            aria-labelledby="simple-tab-project_details"
            class="makeStyles-tabPanel-85"
            id="simple-tabpanel-project_details"
            role="tabpanel"
          >
            <div
              class="MuiBox-root MuiBox-root-103"
            >
              <div
                class="MuiBox-root MuiBox-root-104"
              >
                <div
                  class="MuiBox-root MuiBox-root-105"
                >
                  <a
                    aria-disabled="false"
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeSmall"
                      >
                        <svg
                          role="presentation"
                          style="width: 1.3125rem; height: 1.3125rem;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                            style="fill: currentColor;"
                          />
                        </svg>
                      </span>
                      Back to Projects
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-106"
                >
                  <h1
                    class="MuiBox-root MuiBox-root-107 makeStyles-projectTitle-95"
                  >
                    <b>
                      Project -
                    </b>
                     Test Project Name
                  </h1>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-108"
                >
                  <div
                    class="MuiBox-root MuiBox-root-109"
                  >
                    <div
                      class="MuiChip-root makeStyles-chip-97 makeStyles-chipPublishedCompleted-99 MuiChip-sizeSmall"
                    >
                      <span
                        class="MuiChip-label MuiChip-labelSmall"
                      >
                        Completed
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-110 makeStyles-projectMetadata-96"
              >
                <section
                  class="MuiBox-root MuiBox-root-111"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Objectives
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-112"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Project objectives
                    </p>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-113"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    General Information
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-114"
                  >
                    <dl
                      class="MuiBox-root MuiBox-root-115"
                      data-testid="general_info_component"
                    >
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project Name:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Test Project Name
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Region:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                          data-testid="project-region"
                        />
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Range:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                          data-testid="project-region"
                        >
                          test 1
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Oct 10, 1998
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Completion Date:
                        </dd>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Feb 26, 2021
                        </dt>
                      </div>
                      <div>
                        <dd
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Focal Species:
                        </dd>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        />
                      </div>
                    </dl>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-116"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Project Contacts
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-117"
                  >
                    <ul
                      class="makeStyles-projectContactList-118"
                    >
                      <li
                        class="MuiBox-root MuiBox-root-121"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-122"
                        >
                          <svg
                            class="makeStyles-contactIcon-119"
                            role="presentation"
                            style="width: 2.25rem; height: 2.25rem;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </div>
                        <div>
                          <div>
                            <strong
                              data-testid="contact_name"
                            >
                               Amanda Christensen
                              <sup>
                                <span
                                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
                                >
                                   Primary
                                </span>
                              </sup>
                            </strong>
                          </div>
                          <div>
                            <a
                              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                              href="#"
                            >
                              amanda@christensen.com
                            </a>
                          </div>
                          <div>
                            Amanda and associates
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-123"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="projectPermitsTitle"
                  >
                    Permits
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-124"
                  >
                    <ul
                      class="makeStyles-projectPermitList-125"
                    >
                      <li
                        data-testid="permit_item"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          123 - 
                          <span>
                            Permit type
                          </span>
                        </span>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-126"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="IUCNTitle"
                  >
                    IUCN Conservation Actions Classifications
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-127"
                  >
                    <ul
                      class="makeStyles-projectIucnList-128"
                    >
                      <li
                        data-testid="iucn_data"
                      >
                        IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-129"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="fundingSourcesTitle"
                  >
                    Funding Sources
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-130"
                  >
                    <ul
                      class="makeStyles-projectFundingList-131"
                    >
                      <li
                        data-testid="funding_data"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-132"
                        >
                          <strong
                            data-testid="agencyTitle"
                          >
                            agency name
                          </strong>
                        </div>
                        <dl
                          class="MuiBox-root MuiBox-root-133"
                        >
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Funding Amount:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              $333
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Project ID:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              ABC123
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              Start Date:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              Apr 14, 2000
                            </dt>
                          </div>
                          <div>
                            <dt
                              class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                            >
                              End Date:
                            </dt>
                            <dt
                              class="MuiTypography-root MuiTypography-body2"
                            >
                              Apr 13, 2021
                            </dt>
                          </div>
                        </dl>
                      </li>
                    </ul>
                  </div>
                </section>
                <hr
                  class="MuiDivider-root"
                />
                <section
                  class="MuiBox-root MuiBox-root-134"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-body1"
                    data-testid="partnershipsTitle"
                  >
                    Partnerships
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-135"
                  >
                    <dl
                      class="MuiBox-root MuiBox-root-137"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                          data-testid="indigenousData"
                        >
                          Indigenous Partnerships
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          <span
                            class="makeStyles-partnerItem-136"
                            data-testid="indigenous_partners_data"
                          >
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                          <span
                            class="makeStyles-partnerItem-136"
                            data-testid="indigenous_partners_data"
                          >
                            First nations code
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                          data-testid="stakeholderData"
                        >
                          Other Partnerships
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          <span
                            class="makeStyles-partnerItem-136"
                            data-testid="stakeholder_partners_data"
                          >
                            partner2
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                          <span
                            class="makeStyles-partnerItem-136"
                            data-testid="stakeholder_partners_data"
                          >
                            partner3
                            <span
                              class="seperator"
                            >
                              , 
                            </span>
                          </span>
                        </dd>
                      </div>
                    </dl>
                  </div>
                </section>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="simple-tab-project_documents"
            class="makeStyles-tabPanel-85"
            hidden=""
            id="simple-tabpanel-project_documents"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-138 makeStyles-projectLocationBoundary-87"
    >
      <div
        class="MuiBox-root MuiBox-root-139"
      >
        <div
          class="MuiBox-root MuiBox-root-140"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  aria-label="Open Layer Menu"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
                  data-testid="open-layer-menu"
                  id="open-layer-menu"
                  tabindex="0"
                  title="Open Layer Menu"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <strong>
                      Project Layers (0)
                    </strong>
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7,10L12,15L17,10H7Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-141"
      >
        <div
          class="MuiBox-root MuiBox-root-142"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-143 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_52"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_52"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-144"
      >
        <div
          class="MuiBox-root MuiBox-root-151"
        >
          <div
            class="MuiBox-root MuiBox-root-152"
            hidden=""
          >
            <strong>
              Found 0 treatments
            </strong>
          </div>
          <div
            class="MuiTableContainer-root MuiBox-root MuiBox-root-153"
          >
            <table
              aria-label="treatments-list-table"
              class="MuiTable-root makeStyles-treatmentsTable-145 MuiTable-stickyHeader"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  >
                    ID
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Treatments
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="110"
                  >
                    Width (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="120"
                  >
                    Length (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="110"
                  >
                    Area (Ha)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
                data-testid="project-table"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                    colspan="7"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-154"
                    >
                      No Treatments
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
